--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,3 +2,4 @@ include version.py
 recursive-include emergenet/examples *.py *.ipynb *.sh
 recursive-include emergenet/bin *.so
 recursive-include emergenet *.ipynb *.joblib *.c *.so *.pyx
+Recursive-include emergenet/models *.pickle
