--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,4 @@
 include version.py
 recursive-include emergenet/examples *.py *.ipynb *.sh
 recursive-include emergenet/bin *.so
-recursive-include emergenet *.ipynb *.joblib *.c *.so *.pyx *.pickle *.gz
-recursive-include emergenet/models *.pickle
+recursive-include emergenet *.ipynb *.joblib *.c *.so *.pyx *.pickle *.gz *.csv *.json
