--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,4 +3,4 @@ recursive-include emergenet/examples *.py *.ipynb *.sh
 recursive-include emergenet/bin *.so
 recursive-include emergenet/models *.joblib *.gz
 recursive-include emergenet/data *.csv *.joblib *.gz
-recursive-include emergenet  *.joblib *.c *.so *.pyx *.pickle  *.json
+recursive-include emergenet  *.joblib *.c *.so *.pyx  *.json
